{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 10,
  "lineage": "e5732589-3c46-cb3b-5a50-b6aa303f2a53",
  "resources": [
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:internet-gateway/igw-0f450dd6985e63326",
            "id": "igw-0f450dd6985e63326",
            "owner_id": "418931870324",
            "vpc_id": "vpc-06d911af3c2a00948"
          },
          "dependencies": [
            "module.ec2_module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-dev-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f450dd6985e63326",
            "id": "r-rtb-0548a88bab0272efe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0548a88bab0272efe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_module.aws_internet_gateway.vpc-dev-igw",
            "module.ec2_module.aws_route_table.vpc-dev-public-route-table",
            "module.ec2_module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-dev-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:route-table/rtb-0548a88bab0272efe",
            "id": "rtb-0548a88bab0272efe",
            "owner_id": "418931870324",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06d911af3c2a00948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-dev-public-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f77ecdc08e3b56a",
            "route_table_id": "rtb-0548a88bab0272efe",
            "subnet_id": "subnet-0da8f885d5513fae2"
          },
          "dependencies": [
            "module.ec2_module.aws_route_table.vpc-dev-public-route-table",
            "module.ec2_module.aws_subnet.vpc-dev-public-subnet-1",
            "module.ec2_module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-dev-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:subnet/subnet-0da8f885d5513fae2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da8f885d5513fae2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "418931870324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06d911af3c2a00948"
          },
          "dependencies": [
            "module.ec2_module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:vpc/vpc-06d911af3c2a00948",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00dc295841261373f",
            "default_route_table_id": "rtb-0b9a30847cd801e1d",
            "default_security_group_id": "sg-0e28ceacbb130f92e",
            "dhcp_options_id": "dopt-0de27c499c2b3143c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d911af3c2a00948",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9a30847cd801e1d",
            "owner_id": "418931870324",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:security-group/sg-0f5f0d635c2807c42",
            "description": "Dev VPC Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5f0d635c2807c42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-vpc-default-sg",
            "name_prefix": "",
            "owner_id": "418931870324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-vpc-sg"
            },
            "tags_all": {
              "Name": "dev-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6d79ba071700c89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.sg_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:418931870324:vpc/vpc-0d6d79ba071700c89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d8d505a882d4c12",
            "default_route_table_id": "rtb-00bcb743a8e9d2c8d",
            "default_security_group_id": "sg-065298a26f0a4a49e",
            "dhcp_options_id": "dopt-0de27c499c2b3143c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6d79ba071700c89",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00bcb743a8e9d2c8d",
            "owner_id": "418931870324",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}